.deploy/debug-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
    - name: debug-container
      image: nicolaka/netshoot # A popular image with networking tools
      command:
        - sleep
        - "3600"
