.deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gdevxy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: gdevxy.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-component-svc
                port:
                  number: 8088
    - host: www.gdevxy.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-component-svc
                port:
                  number: 8088
  tls:
    - hosts:
        - gdevxy.ch
        - www.gdevxy.ch
      secretName: gdevxy-tls
